--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -113,7 +113,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "e2e/protractor.conf.cjs",
             "devServerTarget": "shop:serve"
           },
           "configurations": {
@@ -134,6 +134,6 @@
       }
     }
   },
-  "defaultProject": "shop",
+  "defaultProject": "shop"
 
 }
